--- a/materials.html
+++ b/materials.html
@@ -72,8 +72,6 @@
     </nav>
 <!-- ///////////////////////////////// END NAVIGATION BAR //////////////////////////////////// -->
 
-<!-- //////////////////////////////////// START PAGE CONTENT ////////////////////////////////////// -->
-
 <!-- //////////////////////////////// START CATEGORY FILTERING MENUS /////////////////////////////////// -->
     <div class="container-fluid" style="margin-top: 120px;">
       <div class="row">
@@ -193,6 +191,24 @@
                       Switches
                     </label>
                   </div>
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="switchesMaterialsCheckbox">
+                    <label class="form-check-label" for="switchesMaterialsCheckbox">
+                      Breakers
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="switchesMaterialsCheckbox">
+                    <label class="form-check-label" for="switchesMaterialsCheckbox">
+                      Power Panels
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="switchesMaterialsCheckbox">
+                    <label class="form-check-label" for="switchesMaterialsCheckbox">
+                      Power Cables
+                    </label>
+                  </div>
                 </form>
               </div>
             </div>
@@ -214,13 +230,31 @@
                   <div class="form-check">
                     <input type="checkbox" class="form-check-input" id="geBrandsCheckbox">
                     <label class="form-check-label" for="geBrandsCheckbox">
-                      GE
+                      General Electric
                     </label>
                   </div>
                   <div class="form-check">
                     <input type="checkbox" class="form-check-input" id="philipsBrandsCheckbox">
                     <label class="form-check-label" for="philipsBrandsCheckbox">
                       Philips
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="siemensBrandsCheckbox">
+                    <label class="form-check-label" for="allBrandsCheckbox">
+                      Siemens
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="schneiderBrandsCheckbox">
+                    <label class="form-check-label" for="allBrandsCheckbox">
+                      Schneider Electric
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="saudiCableBrandsCheckbox">
+                    <label class="form-check-label" for="allBrandsCheckbox">
+                      Saudi Cables
                     </label>
                   </div>
                 </form>
@@ -232,7 +266,7 @@
             <div class="row mt-4">
               <div class="col-sm-12 col-md-6 col-lg-3 material ge switch">
                 <div class="card w-100" style="width: 18rem;">
-                  <img class="card-img-top" src="images\electrical\lamps\lamp1.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="images\electrical\lamp1.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">GE Switch</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -249,7 +283,7 @@
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3 material ge lamp">
                 <div class="card w-100" style="width: 18rem;">
-                  <img class="card-img-top" src="images\electrical\lamps\lamp2.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="images\electrical\lamp2.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">GE Lamp</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -266,7 +300,7 @@
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3 material philips lamp">
                 <div class="card w-100" style="width: 18rem;">
-                  <img class="card-img-top" src="images\electrical\lamps\lamp3.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="images\electrical\lamp3.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Philips Lamp</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -283,7 +317,7 @@
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3 material philips switch">
                 <div class="card w-100" style="width: 18rem;">
-                  <img class="card-img-top" src="images\electrical\lamps\lamp4.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="images\electrical\lamp4.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Philips Switch</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -298,12 +332,79 @@
                   </div>
                 </div>
               </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 material siemens powerPanel">
+                <div class="card w-100 mh-100 mw-100" style="width: 18rem;">
+                  <img class="card-img-top" src="images\electrical\siemens_power_panel.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Siemens Power Panel</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                  </ul>
+                  <div class="card-body">
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 material saudiCables cable">
+                <div class="card w-100" style="width: 18rem;">
+                  <img class="card-img-top" src="images\electrical\lamp2.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Power Cable-Saudi Cables</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                  </ul>
+                  <div class="card-body">
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 material schneider breaker">
+                <div class="card w-100" style="width: 18rem;">
+                  <img class="card-img-top" src="images\electrical\lamp3.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Schneider Electric Breaker</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                  </ul>
+                  <div class="card-body">
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 material ge powerPanel">
+                <div class="card w-100" style="width: 18rem;">
+                  <img class="card-img-top" src="images\electrical\lamp4.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">General Electric Power Panel</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                  </ul>
+                  <div class="card-body">
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                  </div>
+                </div>
+              </div>
             </div>
-<!-- //////////////////////////////////// END PRODUCT CARDS ////////////////////////////////////// -->
+<!-- /////////////////////////////// END ELECTRICAL PRODUCTS MAIN CARD /////////////////////////////-->
           </div>
         </div>
-<!-- /////////////////////////////// END ELECTRICAL PRODUCTS MAIN CARD /////////////////////////////-->
-<!-- //////////////////////////////////// END PAGE CONTENT ////////////////////////////////////// -->
+<!-- /////////////////////////////// START ELECTRICAL PRODUCTS MAIN CARD /////////////////////////////-->
 
     <!-- JavaScript Bootstrap Links -->
     <!-- <script src="zenscroll-latest\zenscroll-min.js"></script> -->
