--- a/materials.html
+++ b/materials.html
@@ -164,7 +164,7 @@
 
 <!-- /////////////////////////////// START ELECTRICAL PRODUCTS MAIN CARD /////////////////////////////-->
       <div class="col-sm-12 col-md-9 col-lg-9">
-        <div class="p-2 mw-100" style="background-color: #eeeeee">
+        <div class="p-2 mw-100 category electricalCategory" style="background-color: #eeeeee">
           <span style="font-size: 2rem;">Electrical</span>
 <!-- ///////////////////////////////// START MATERIALS FILTERING MENUS /////////////////////////////////// -->
             <div class="btn-group">
@@ -368,7 +368,7 @@
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3 east electricalMaterial schneider breaker">
                 <div class="card w-100 mb-2" style="width: 18rem;">
-                  <img class="card-img-top" src="images\electrical\Schneider_Electric_breaker.JPG" alt="Card image cap">
+                  <img class="card-img-top" src="images\electrical\Schneider_Electric_breaker.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Schneider Electric Breaker</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -405,9 +405,9 @@
           </div>
 
 <!-- /////////////////////////////// START MECHANICAL PRODUCTS MAIN CARD /////////////////////////////-->
-          <div class="p-2 mw-100" style="background-color: #eeeeee">
+          <div class="p-2 mw-100 category mechanicalCategory" style="background-color: #eeeeee">
             <span style="font-size: 2rem;">Mechanical</span>
-  <!-- ///////////////////////////////// START MATERIALS FILTERING MENUS /////////////////////////////////// -->
+  <!-- ///////////////////////////////// START MECHANICAL MATERIALS FILTERING MENUS /////////////////////////////////// -->
               <div class="btn-group">
                 <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Materials
@@ -441,9 +441,9 @@
                   </form>
                 </div>
               </div>
-  <!-- ///////////////////////////////// END MATERIALS FILTERING MENUS /////////////////////////////////// -->
+  <!-- ///////////////////////////////// END MECHANICAL MATERIALS FILTERING MENUS /////////////////////////////////// -->
 
-  <!-- ////////////////////////////// START BRANDS FILTERING MENUS //////////////////////////////// -->
+  <!-- ////////////////////////////// START MECHANICAL BRANDS FILTERING MENUS //////////////////////////////// -->
              <div class="btn-group">
                 <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Brand
@@ -477,9 +477,9 @@
                   </form>
                 </div>
               </div>
-  <!-- ////////////////////////////// END BRANDS FILTERING MENUS //////////////////////////////// -->
+  <!-- ////////////////////////////// END MECHANICAL BRANDS FILTERING MENUS //////////////////////////////// -->
 
-  <!-- //////////////////////////////////// START ELECTRICAL PRODUCTS CARDS ////////////////////////////////////// -->
+  <!-- //////////////////////////////////// START MECHANICAL PRODUCTS CARDS ////////////////////////////////////// -->
               <div class="row mt-4">
                 <div class="col-sm-12 col-md-6 col-lg-3 north mechanicalMaterial kohler pipe">
                   <div class="card w-100 mb-2" style="width: 18rem;">
@@ -549,11 +549,161 @@
                     </div>
                   </div>
                 </div>
-                <!-- //////////// fffffffffffff /////// -->
               </div>
             </div>
 <!-- /////////////////////////////// END MECHANICAL PRODUCTS MAIN CARD /////////////////////////////-->
-        </div>
+<!-- /////////////////////////////// END MECHANICAL PRODUCTS MAIN CARD /////////////////////////////-->
+
+<!-- /////////////////////////////// START FINISHING PRODUCTS MAIN CARD /////////////////////////////-->
+          <div class="p-2 mw-100 category finishingCategory" style="background-color: #eeeeee">
+            <span style="font-size: 2rem;">Finishing</span>
+  <!-- ///////////////////////////////// START FINISHING MATERIALS FILTERING MENUS /////////////////////////////////// -->
+              <div class="btn-group">
+                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Materials
+                </button>
+                <div class="dropdown-menu">
+                  <form class="px-4 py-3">
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="allMechanicalMaterialsCheckbox">
+                      <label class="form-check-label" for="allMechanicalMaterialsCheckbox">
+                        All
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="pipesMaterialsCheckbox">
+                      <label class="form-check-label" for="pipesMaterialsCheckbox">
+                        Pipes
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="plumbingMaterialsCheckbox">
+                      <label class="form-check-label" for="plumbingMaterialsCheckbox">
+                        Plumbing
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="fittingsMaterialsCheckbox">
+                      <label class="form-check-label" for="fittingsMaterialsCheckbox">
+                        Fittings
+                      </label>
+                    </div>
+                  </form>
+                </div>
+              </div>
+  <!-- ///////////////////////////////// END MECHANICAL MATERIALS FILTERING MENUS /////////////////////////////////// -->
+
+  <!-- ////////////////////////////// START MECHANICAL BRANDS FILTERING MENUS //////////////////////////////// -->
+             <div class="btn-group">
+                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Brand
+                </button>
+                <div class="dropdown-menu">
+                  <form class="px-4 py-3">
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="allMechanicalBrandsCheckbox">
+                      <label class="form-check-label" for="allMechanicalBrandsCheckbox">
+                        All
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="duPontBrandsCheckbox">
+                      <label class="form-check-label" for="duPontBrandsCheckbox">
+                        DuPont
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="colstonBrandsCheckbox">
+                      <label class="form-check-label" for="colstonBrandsCheckbox">
+                        Colston
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="kohlerBrandsCheckbox">
+                      <label class="form-check-label" for="kohlerBrandsCheckbox">
+                        kohler
+                      </label>
+                    </div>
+                  </form>
+                </div>
+              </div>
+  <!-- ////////////////////////////// END MECHANICAL BRANDS FILTERING MENUS //////////////////////////////// -->
+
+  <!-- //////////////////////////////////// START MECHANICAL PRODUCTS CARDS ////////////////////////////////////// -->
+              <div class="row mt-4">
+                <div class="col-sm-12 col-md-6 col-lg-3 north mechanicalMaterial kohler pipe">
+                  <div class="card w-100 mb-2" style="width: 18rem;">
+                    <img class="card-img-top" src="images\mechanical\pipes1.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Kohler Pipe</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">Northern Province</li>
+                      <li class="list-group-item">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3 east mechanicalMaterial dupont plumbing">
+                  <div class="card w-100 mb-2" style="width: 18rem;">
+                    <img class="card-img-top" src="images\mechanical\plumbing1.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">DuPont Plumbing</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">Eastern Province</li>
+                      <li class="list-group-item">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3 west mechanicalMaterial colston fitting">
+                  <div class="card w-100 mb-2" style="width: 18rem;">
+                    <img class="card-img-top" src="images\mechanical\fittings1.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Colston Fittings</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">Western Province</li>
+                      <li class="list-group-item">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3 middle mechanicalMaterial kohler fitting">
+                  <div class="card w-100 mb-2" style="width: 18rem;">
+                    <img class="card-img-top" src="images\mechanical\fittings2.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Kohler Fittings</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">Middle Province</li>
+                      <li class="list-group-item">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+<!-- /////////////////////////////// END FINISHING PRODUCTS MAIN CARD /////////////////////////////-->
+<!-- /////////////////////////////// END FINISHING PRODUCTS MAIN CARD /////////////////////////////-->
+      </div>
 <!-- /////////////////////////////// END ALL PRODUCTS MAIN CONTAINER  /////////////////////////////-->
 
 
@@ -564,9 +714,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <script src="script.js" type="text/javascript"></script>
+    <script src="categoryFilter.js" type="text/javascript"></script>
     <script src="electricalFilter.js" type="text/javascript"></script>
-    <script src="mechanicalFilter.js" type="text/javascript">
-
-    </script>
+    <script src="mechanicalFilter.js" type="text/javascript"></script>
   </body>
 </html>
